--- a/jekyll/forms/index.html
+++ b/jekyll/forms/index.html
@@ -5,21 +5,19 @@ controllerjs: forms
 
 <div id="formsPage" class="page-content">
 
-    <div class="mdl-grid">
+    <div class="mdl-grid" v-if="formList">
 
-        {% raw %}
+        <div v-if="!formList" class="mdl-spinner mdl-js-spinner is-active"></div>
 
-        <div v-show="!formList.xforms" class="mdl-spinner mdl-js-spinner is-active"></div>
-
-        <div class="demo-card-square mdl-card mdl-shadow--2dp" v-if="formList.xforms"
+        <div class="demo-card-square mdl-card mdl-shadow--2dp"
              v-for="val in formList.xforms.xform">
 
             <div class="mdl-card__title mdl-card--expand">
-                <h2 class="mdl-card__title-text">{{ val.name }}</h2>
+                <h2 class="mdl-card__title-text">[{ val.name }]</h2>
             </div>
             <div class="mdl-card__supporting-text">
-                Number of Submissions: {{ val.totalSubmissions }}<br>
-                Form ID: {{ val.formID }}
+                Number of Submissions: [{ val.totalSubmissions }]<br>
+                Form ID: [{ val.formID }]
 
             </div>
             <div class="mdl-card__actions mdl-card--border">
@@ -43,8 +41,6 @@ controllerjs: forms
                             Download XForm XML
                         </a>
                     </li>
-
-                    <!-- only show if enketo is enabled -->
                     <li id="get-enketo-url" class="mdl-menu__item"
                         v-if="enketo.enabled === true" v-on:click="getEnketoURL(val.formID)">
                         <div class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">Fetch Enketo URL</div>
@@ -54,10 +50,9 @@ controllerjs: forms
             </div>
         </div>
 
-        {% endraw %}
 
         <!-- Enketo Dialog -->
-        <dialog id="enketo-dialog" class="mdl-dialog">
+        <!-- <dialog id="enketo-dialog" class="mdl-dialog">
             <h6 class="mdl-dialog__title">Enketo Express</h6>
             <div class="mdl-dialog__content">
                 <p>Fill out survey online with Enketo Express</p>
@@ -68,7 +63,7 @@ controllerjs: forms
                 </a>
                 <button type="button" class="mdl-button mdl-js-button mdl-button--raised close">Close</button>
             </div>
-        </dialog>
+        </dialog> -->
     </div>
 
 </div>
