--- a/pages/forms/index.html
+++ b/pages/forms/index.html
@@ -58,46 +58,42 @@
 
     <div id="formsPage" class="page-content">
 
-    <div class="mdl-grid">
+    <div class="mdl-grid" v-if="formList">
 
-        
+        <div v-if="!formList" class="mdl-spinner mdl-js-spinner is-active"></div>
 
-        <div v-show="!formList.xforms" class="mdl-spinner mdl-js-spinner is-active"></div>
-
-        <div class="demo-card-square mdl-card mdl-shadow--2dp" v-if="formList.xforms"
+        <div class="demo-card-square mdl-card mdl-shadow--2dp"
              v-for="val in formList.xforms.xform">
 
             <div class="mdl-card__title mdl-card--expand">
-                <h2 class="mdl-card__title-text">{{ val.name }}</h2>
+                <h2 class="mdl-card__title-text">[{ val.name }]</h2>
             </div>
             <div class="mdl-card__supporting-text">
-                Number of Submissions: {{ val.totalSubmissions }}<br>
-                Form ID: {{ val.formID }}
+                Number of Submissions: [{ val.totalSubmissions }]<br>
+                Form ID: [{ val.formID }]
 
             </div>
             <div class="mdl-card__actions mdl-card--border">
                 <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect"
-                   href="/omk/pages/submissions/?form={{ val.formID }}">
+                   href="/omk/pages/submissions/?form=">
                     View Submissions
                 </a>
                 <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect"
-                   href="/omk/data/forms/{{ val.formID }}.xlsx">
+                   href="/omk/data/forms/.xlsx">
                     XLSX Form
                 </a>
 
-                <button id="{{ val.formID }}"
+                <button id=""
                         class="mdl-button mdl-js-button mdl-button--icon buttonRight">
                     <i class="material-icons">more_vert</i>
                 </button>
-                <ul class="mdl-menu mdl-menu--top-right mdl-js-menu" for="{{ val.formID }}">
+                <ul class="mdl-menu mdl-menu--top-right mdl-js-menu" for="">
                     <li class="mdl-menu__item">
                         <a target="_blank" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect"
-                           href="/omk/data/forms/{{ val.formID }}.xml">
+                           href="/omk/data/forms/.xml">
                             Download XForm XML
                         </a>
                     </li>
-
-                    <!-- only show if enketo is enabled -->
                     <li id="get-enketo-url" class="mdl-menu__item"
                         v-if="enketo.enabled === true" v-on:click="getEnketoURL(val.formID)">
                         <div class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">Fetch Enketo URL</div>
@@ -107,10 +103,9 @@
             </div>
         </div>
 
-        
 
         <!-- Enketo Dialog -->
-        <dialog id="enketo-dialog" class="mdl-dialog">
+        <!-- <dialog id="enketo-dialog" class="mdl-dialog">
             <h6 class="mdl-dialog__title">Enketo Express</h6>
             <div class="mdl-dialog__content">
                 <p>Fill out survey online with Enketo Express</p>
@@ -121,7 +116,7 @@
                 </a>
                 <button type="button" class="mdl-button mdl-js-button mdl-button--raised close">Close</button>
             </div>
-        </dialog>
+        </dialog> -->
     </div>
 
 </div>
