--- a/pages/upload-form/index.html
+++ b/pages/upload-form/index.html
@@ -60,6 +60,11 @@
 
     <div class="mdl-grid">
 
+    <script type="text/x-template" id="uploadForm">
+      <form id="{{ id }}" class="{{ class }}" name="{{ name }}" action="{{ action }}" method="{{ method }}" v-on:submit.prevent="handleAjaxFormSubmit" @change="onFileChange"><slot></slot></form>
+      </div>
+    </script>
+
         
 
 
