removing pages folder

--- a/jekyll/upload-form/index.html
+++ b/jekyll/upload-form/index.html
@@ -8,7 +8,7 @@ auth: auth
 
     <div class="mdl-grid">
 
-        <ajax-form id="formOne" class="my-form" name="myCoolForm" action="/omk/odk/upload-form" method="POST" enctype="multipart/form-data" v-response-type="json">
+        <ajax-form id="formOne" class="my-form" name="myCoolForm" action="/omk/odk/upload-form" method="POST" enctype="multipart/form-data" response-type="type">
             <!-- <div class="dropzone-area" @dragenter="hovering = true" @dragleave="hovering = false" :class="{'dropzone-hover': hovering}"> -->
             <div class="dropzone-area">
 
