--- a/jekyll/login/index.html
+++ b/jekyll/login/index.html
@@ -10,8 +10,8 @@ auth: auth
 
     <div class="mdl-grid">
 
-        <div class="mdl-cell mdl-cell--4-col"></div>
-        <div class="mdl-cell mdl-cell--4-col">
+        <!-- <div class="mdl-cell mdl-cell--4-col"></div> -->
+        <div class="mdl-cell mdl-cell--4-col" style="margin: auto;">
 
             <h2>Login</h2>
             
@@ -36,7 +36,7 @@ auth: auth
             </button>
 
         </div>
-        <div class="mdl-cell mdl-cell--4-col"></div>
+        <!-- <div class="mdl-cell mdl-cell--4-col"></div> -->
 
     </div>
 
