--- a/jekyll/submissions/index.html
+++ b/jekyll/submissions/index.html
@@ -26,15 +26,15 @@ auth: auth
                         ODK Data
                     </button>
 
-                    <button id="osm-options" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+                    <!-- <button id="osm-options" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
                         OSM Data
-                    </button>
+                    </button> -->
 
-                    <a id="submit-OSM-changesets" href="#">
+                    <!-- <a id="submit-OSM-changesets" href="#">
                     <button class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
                         Submit to OSM
                     </button>
-                    </a>
+                    </a> -->
 
                     <ul class="mdl-menu mdl-menu--bottom-right- mdl-js-menu mdl-js-ripple-effect" for="odk-options">
                         <a id="downloadCsv" download="data.csv" href="#" class="download">
