download csv and json is working now.

--- a/jekyll/submissions/index.html
+++ b/jekyll/submissions/index.html
@@ -37,7 +37,7 @@ auth: auth
                     </a> -->
 
                     <ul class="mdl-menu mdl-menu--bottom-right- mdl-js-menu mdl-js-ripple-effect" for="odk-options">
-                        <a id="downloadCsv" download="data.csv" href="#" class="download">
+                        <a id="downloadCsv" href="#" class="download">
                             <li class="mdl-menu__item">Download CSV</li>
                         </a>
                         <a id="downloadJson" download="data.json" href="#">
