--- a/jekyll/forms/index.html
+++ b/jekyll/forms/index.html
@@ -43,7 +43,7 @@ auth: auth
                         </a>
                     </li>
                     <li id="get-enketo-url" class="mdl-menu__item"
-                        v-if="enketo.enabled === true" :click="getEnketoURL(val.formID)">
+                        v-if="enketo.enabled === true" v-on:click="getEnketoURL(val.formID)">
                         <div class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">Fetch Enketo URL</div>
                     </li>
 
@@ -51,23 +51,23 @@ auth: auth
             </div>
         </div>
 
-
-        <!-- Enketo Dialog -->
-        <dialog id="enketo-dialog" class="mdl-dialog">
-            <h6 class="mdl-dialog__title">Enketo Express</h6>
-            <div class="mdl-dialog__content">
-                <p>Fill out survey online with Enketo Express</p>
-            </div>
-            <div class="mdl-dialog__actions">
-                <a id="open-enketo-url" href="#" target="_blank">
-                    <button type="button" class="mdl-button mdl-js-button mdl-button--raised">Open</button>
-                </a>
-                <button type="button" class="mdl-button mdl-js-button mdl-button--raised close">Close</button>
-            </div>
-        </dialog>
     </div>
 
 </div>
+
+<!-- Enketo Dialog -->
+<dialog id="enketo-dialog" class="mdl-dialog">
+    <h6 class="mdl-dialog__title">Enketo Express</h6>
+    <div class="mdl-dialog__content">
+        <p>Fill out survey online with Enketo Express</p>
+    </div>
+    <div class="mdl-dialog__actions">
+        <a id="open-enketo-url" href="#" target="_blank">
+            <button type="button" class="mdl-button mdl-js-button mdl-button--raised">Open</button>
+        </a>
+        <button type="button" class="mdl-button mdl-js-button mdl-button--raised close">Close</button>
+    </div>
+</dialog>
 
 <link rel="stylesheet" href="../css/forms.css">
 <link rel="stylesheet" href="../css/dialog-polyfill.css">
