added custom component for header

--- a/jekyll/forms/index.html
+++ b/jekyll/forms/index.html
@@ -2,9 +2,10 @@
 layout: default
 controllerjs: forms
 auth: auth
+mixins: header-mixin
 ---
 
-<div id="formsPage" class="page-content">
+<div class="page-content">
 
     <div class="mdl-grid" v-if="formList">
 
