Added logout button to all pages. Added logic validate token

--- a/jekyll/login/index.html
+++ b/jekyll/login/index.html
@@ -2,10 +2,11 @@
 layout: default
 controllerjs: login
 auth: auth
+mixins: header-mixin
 ---
 
-<div id="loginPage" class="page-content">
-<!-- MDL Progress Bar with Indeterminate Progress -->
+<div class="page-content">
+    <!-- MDL Progress Bar with Indeterminate Progress -->
     <div id="p2" v-show="loading" class="mdl-progress mdl-js-progress mdl-progress__indeterminate"></div>
     <div class="mdl-grid">
 
@@ -30,12 +31,14 @@ auth: auth
               </div>
             </form>
 
-            <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored"@click="submit()">
+            <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored"@click="submit()"
+            :disabled="disabled">
               Log in
             </button>
 
+            <p class="authValidation" v-show="invalid" v-cloak>Invalid username or password</p>
+
         </div>
-        <!-- <div class="mdl-cell mdl-cell--4-col"></div> -->
 
     </div>
 
