--- a/jekyll/submissions/index.html
+++ b/jekyll/submissions/index.html
@@ -7,10 +7,11 @@ csv: jquery.csv
 index: index
 omk: omk
 auth: auth
+mixins: header-mixin
 ---
 
 
-<div id="submissionsPage" class="page-content">
+<div class="page-content">
 
     <div class="mask">
         <div class="mdl-grid grid-menu mdl-cell mdl-cell--12-col">
@@ -60,7 +61,7 @@ auth: auth
         <section class="csv">
 
             <div class="table rendered">
-                <table id="submission-table" 
+                <table id="submission-table"
                 class="mdl-data-table mdl-js-data-table mdl-data-table--selectable mdl-shadow--2dp">
 
                 </table>
