--- a/jekyll/upload-form/index.html
+++ b/jekyll/upload-form/index.html
@@ -2,9 +2,10 @@
 layout: default
 controllerjs: upload
 auth: auth
+mixins: header-mixin
 ---
 
-<div id="uploadPage" class="page-content">
+<div class="page-content">
 
     <div class="mdl-grid">
 
