Add user modal UI is complete

--- a/jekyll/users/index.html
+++ b/jekyll/users/index.html
@@ -66,44 +66,65 @@ mixins: header-mixin
 
         <!-- Enketo Dialog -->
 <dialog id="addUser" class="mdl-dialog">
-    <h6 class="mdl-dialog__title">
-      <i class="material-icons">person_add</i> Add user
-    </h6>
-    <div class="mdl-dialog__content">
-        <div class="search mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-          <input class="mdl-textfield__input" type="name" id="name">
-          <label class="mdl-textfield__label" for="name">name</label>
+
+    <div v-show="!userAdded">
+        <h6 class="mdl-dialog__title">
+          <i class="material-icons">person_add</i> Add user
+        </h6>
+        <div class="mdl-dialog__content">
+            <div class="search mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+              <input class="mdl-textfield__input" type="name" id="name">
+              <label class="mdl-textfield__label" for="name">name</label>
+            </div>
+            <div class="search mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+              <input class="mdl-textfield__input" type="email" id="email">
+              <label class="mdl-textfield__label" for="email">email</label>
+            </div>
+            <h5>Permissions:</h5>
+
+            <div>
+
+              <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="option-1">
+                <input type="radio" id="option-1" class="mdl-radio__button" name="options" value="1" checked>
+                <span class="mdl-radio__label">System Admin</span>
+              </label>
+              <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="option-2">
+                <input type="radio" id="option-2" class="mdl-radio__button" name="options" value="2">
+                <span class="mdl-radio__label">Read only</span>
+              </label>
+              <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="option-3">
+                <input type="radio" id="option-3" class="mdl-radio__button" name="options" value="3">
+                <span class="mdl-radio__label">Read & edit</span>
+              </label>
+
+            </div>
+
         </div>
-        <div class="search mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-          <input class="mdl-textfield__input" type="email" id="email">
-          <label class="mdl-textfield__label" for="email">email</label>
-        </div>
-        <h5>Permissions:</h5>
-
-        <div>
-
-          <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="option-1">
-            <input type="radio" id="option-1" class="mdl-radio__button" name="options" value="1" checked>
-            <span class="mdl-radio__label">System Admin</span>
-          </label>
-          <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="option-2">
-            <input type="radio" id="option-2" class="mdl-radio__button" name="options" value="2">
-            <span class="mdl-radio__label">Read only</span>
-          </label>
-          <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="option-3">
-            <input type="radio" id="option-3" class="mdl-radio__button" name="options" value="3">
-            <span class="mdl-radio__label">Read & edit</span>
-          </label>
-
+        <div class="mdl-dialog__actions">
+            <a>
+                <button type="button" class="mdl-button mdl-js-button" @click="userAdded = true">SUBMIT</button>
+            </a>
+            <button type="button" class="mdl-button mdl-js-button close">CANCEL</button>
         </div>
 
     </div>
-    <div class="mdl-dialog__actions">
-        <a>
-            <button type="button" class="mdl-button mdl-js-button">SUBMIT</button>
-        </a>
-        <button type="button" class="mdl-button mdl-js-button close">CANCEL</button>
+    <div v-show="userAdded">
+
+      <h6 class="mdl-dialog__title">
+          <i class="material-icons">person_add</i> Add user
+        </h6>
+        <div class="mdl-dialog__content">
+          <p>The new user has been added.</p>
+        </div>
+        <div class="mdl-dialog__actions">
+            <button type="button" class="mdl-button mdl-js-button closeDial" @click="closeDialog()">CANCEL</button>
+        </div>
+
     </div>
+
+
+
+
 </dialog>
 
 
