--- a/jekyll/users/index.html
+++ b/jekyll/users/index.html
@@ -104,7 +104,7 @@ mixins: header-mixin
             <a>
                 <button type="button" class="mdl-button mdl-js-button" @click="userAdded = true">SUBMIT</button>
             </a>
-            <button type="button" class="mdl-button mdl-js-button close">CANCEL</button>
+            <button type="button" class="mdl-button mdl-js-button" @click="closeDialog()">CANCEL</button>
         </div>
 
     </div>
@@ -117,7 +117,7 @@ mixins: header-mixin
           <p>The new user has been added.</p>
         </div>
         <div class="mdl-dialog__actions">
-            <button type="button" class="mdl-button mdl-js-button closeDial" @click="closeDialog()">CANCEL</button>
+            <button type="button" class="mdl-button mdl-js-button closeDial" @click="closeDialog()">Close</button>
         </div>
 
     </div>
