--- a/jekyll/users/index.html
+++ b/jekyll/users/index.html
@@ -24,37 +24,25 @@ mixins: header-mixin
                 </button>
 
                   <div class="search mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                    <input class="mdl-textfield__input" type="password" id="password">
-                    <label class="mdl-textfield__label" for="password">search</label>
+                    <input class="mdl-textfield__input" type="searchQuery" id="searchQuery" v-model="searchQuery">
+                    <label class="mdl-textfield__label" for="searchQuery">search</label>
                     <i class="s-icon material-icons">search</i>
                   </div>
 
             </div>
             <div class="section table">
 
-                <table class="mdl-data-table mdl-js-data-table mdl-data-table--selectable mdl-shadow--2dp">
+                <table class="mdl-data-table mdl-js-data-table mdl-shadow--2dp" style="width: 100%" >
                   <thead>
-                    <tr>
-                      <th class="mdl-data-table__cell--non-numeric">Material</th>
-                      <th>Quantity</th>
-                      <th>Unit price</th>
+                    <tr v-if="tableHeader">
+                      <th v-for='h in tableHeader'>[{h}]</th>
                     </tr>
                   </thead>
                   <tbody>
-                    <tr>
-                      <td class="mdl-data-table__cell--non-numeric">Acrylic (Transparent)</td>
-                      <td>25</td>
-                      <td>$2.90</td>
-                    </tr>
-                    <tr>
-                      <td class="mdl-data-table__cell--non-numeric">Plywood (Birch)</td>
-                      <td>50</td>
-                      <td>$1.25</td>
-                    </tr>
-                    <tr>
-                      <td class="mdl-data-table__cell--non-numeric">Laminate (Gold on Blue)</td>
-                      <td>10</td>
-                      <td>$2.35</td>
+                    <tr v-for="data in filteredData">
+                       <template>
+                          <td v-for="header in tableHeader" >[{data[[header]]}]</td>
+                       </template >
                     </tr>
                   </tbody>
                 </table>
