User Management table update

--- a/jekyll/users/index.html
+++ b/jekyll/users/index.html
@@ -41,7 +41,26 @@ mixins: header-mixin
                   <tbody>
                     <tr v-for="data in filteredData">
                        <template>
-                          <td v-for="header in tableHeader" >[{data[[header]]}]</td>
+
+                          <!-- <td v-for="header in tableHeader" ">[{data[[header]]}]</td> -->
+
+                          <td v-for="header in tableHeader" >
+
+                            <span v-if="header === 'admin'">
+                              <i class="material-icons" v-if="data[header]">done</i>
+                            </span>
+                            <span v-else-if="header === 'read'">
+                              <i class="material-icons" v-if="data[header]">done</i>
+                            </span>
+                            <span v-else-if="header === 'write'">
+                              <i class="material-icons" v-if="data[header]">done</i>
+                            </span>
+                            <span v-else>
+                              [{data[[header]]}]
+                            </span>
+
+                          </td>
+                          <td ><i class="material-icons">delete</i></td>
                        </template >
                     </tr>
                   </tbody>
@@ -61,28 +80,43 @@ mixins: header-mixin
         </h6>
         <div class="mdl-dialog__content">
             <div class="search mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-              <input class="mdl-textfield__input" type="name" id="name">
-              <label class="mdl-textfield__label" for="name">name</label>
+              <input class="mdl-textfield__input" type="name" id="username" v-model="newUser.username">
+              <label class="mdl-textfield__label" for="username">username</label>
             </div>
             <div class="search mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-              <input class="mdl-textfield__input" type="email" id="email">
+              <input class="mdl-textfield__input" type="password" id="password" v-model="newUser.password">
+              <label class="mdl-textfield__label" for="password">email</label>
+            </div>
+            <div class="search mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+              <input class="mdl-textfield__input" type="name" id="first_name" v-model="newUser.first_name">
+              <label class="mdl-textfield__label" for="first_name">first name</label>
+            </div>
+            <div class="search mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+              <input class="mdl-textfield__input" type="name" id="last_name" v-model="newUser.last_name">
+              <label class="mdl-textfield__label" for="last_name">last name</label>
+            </div>
+            <div class="search mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+              <input class="mdl-textfield__input" type="email" id="email" v-model="newUser.email">
               <label class="mdl-textfield__label" for="email">email</label>
             </div>
+
             <h5>Permissions:</h5>
 
             <div>
 
               <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="option-1">
-                <input type="radio" id="option-1" class="mdl-radio__button" name="options" value="1" checked>
+                <input type="radio" id="option-1" class="mdl-radio__button" name="options" value="admin" v-model="newUser.role">
                 <span class="mdl-radio__label">System Admin</span>
               </label>
-              <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="option-2">
-                <input type="radio" id="option-2" class="mdl-radio__button" name="options" value="2">
-                <span class="mdl-radio__label">Read only</span>
-              </label>
               <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="option-3">
-                <input type="radio" id="option-3" class="mdl-radio__button" name="options" value="3">
+                <input type="radio" id="option-3" class="mdl-radio__button" name="options" value="read"
+                v-model="newUser.role">
                 <span class="mdl-radio__label">Read & edit</span>
+              </label>
+              <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="option-2">
+                <input type="radio" id="option-2" class="mdl-radio__button" name="options" value="write"
+                v-model="newUser.role">
+                <span class="mdl-radio__label">Read only</span>
               </label>
 
             </div>
